# Codes-for-Post-selected-MIPT

./: CITATION.cff  LICENSE  README.md
RTN_code_paper/: pyproject.toml  rtn_circ_dyn_exp.py  rtn_circ_mi.py  rtn_circuit_style_tmi.py  rtn_uniform_circ_style_tmi.py
RTN_code_paper/RTN_code_paper/: README.md  rtn_circ_beta.py  rtn_circ_ee.py  rtn_circ_free_energy.py  rtn_circuit_eta.py  rtn_circuit_style_ancilla_op.py
codes for random quantum circuit/: README.md
codes for random quantum circuit/Bulk exponent/: HaarRandomCircuitAncilla.jl  bulk_critical_exponent.jl
codes for random quantum circuit/Free energy/: FreeEnergy.jl  HaarRandomCircuit.jl  HaarRandomCircuitAncilla.jl  temporal_correlation.jl
codes for random quantum circuit/TMI_p/: mutualInformationHaar.jl
codes for random quantum circuit/TMI_t/: HaarRandomCircuit.jl
codes for random quantum circuit/ancilla_t/: AncillaEntropy.jl  HaarRandomCircuitAncilla.jl
codes for random quantum circuit/spatial_correlation/: HaarRandomCircuitAncilla.jl
postselection code unconstrained/TMI_p/: HaarRandomCircuit.jl
postselection code unconstrained/TMI_t/: mutualInformationHaar.jl
postselection code unconstrained/ancilla_p/: AncillaEntropy.jl  HaarRandomCircuitAncilla.jl
postselection code unconstrained/spatial_correlation/: spatial_correlation.jl
