[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rtn-code-paper"
version = "0.1.0"
description = "Standalone RTN circuit-style scripts used for paper calculations."
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "matplotlib==3.8.4",
]
